fixed h1 and h2 font size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ h1 {
     margin-bottom: .4em;
 
     font-family: var(--secondary-font);
-    font-size: 1.5em;
+    font-size: 1.6em;
     text-align: center;
     text-transform: lowercase;
 }
@@ -216,4 +216,12 @@ h1::after {
 
 h2 {
     margin-bottom: .25em;
+
+    font-size: 1.4em;
+}
+
+@media (min-width: 544px) {
+    h1 {
+        font-size: 1.5em;
+	}
 }
